@@ -65,23 +65,41 @@
   </tr>
 
 <!-- Add here a version when it is finished (when switching to Ver++) -->
-     <tr class="regTest2">
-       <td>v0.0.5-209</td>
-       <td>02 jan 2011</td>                               <!-- Date                  -->
-       <td align="right">42&nbsp;910</td>                 <!-- SLOC                  -->
-       <td align="right">13</td>                          <!-- Console count         -->
-       <td>253&nbsp;<font color="red">fail</font></td >   <!-- CppUnit unit tests    -->
-       <td>12&nbsp;<font color="green">success</font></td><!-- Boost.Test unit tests -->
-       <td><font color="red">fail</font></td >            <!-- vg OreGui             -->
-       <td><font color="red">fail</font></td >            <!-- vg Core               -->
-       <td>OK</td>                                        <!-- Linux                 -->
-       <td><font color="red">No</font>&nbsp;
-	 <A NAME="UpNote013" HREF="#Note013">
-	 <sup>13</sup></A></td>                           <!-- Win32                 -->
-       <td>417</td>                                       <!-- Number of PO msg      -->
-       <td><font color="red">Failed</font></td>           <!-- Unit tests result     -->
-     </tr>
-   </table>
+  <tr class="regTest1">
+    <td>v0.0.5-209</td>
+    <td>28 jan 2011</td>                               <!-- Date                  -->
+    <td align="right">42&nbsp;930</td>                 <!-- SLOC                  -->
+    <td align="right">13</td>                          <!-- Console count         -->
+    <td>220&nbsp;<font color="red">fail</font></td >   <!-- CppUnit unit tests    -->
+    <td>41&nbsp;<font color="red">fail</font></td><!-- Boost.Test unit tests -->
+    <td><font color="red">fail</font></td >            <!-- vg OreGui             -->
+    <td><font color="red">fail</font></td >            <!-- vg Core               -->
+    <td><font color="red">No</font></td>               <!-- Linux                 -->
+    <td><font color="red">No</font>&nbsp;
+      <A NAME="UpNote013" HREF="#Note013">
+      <sup>13</sup></A></td>                           <!-- Win32                 -->
+      <td>417</td>                                     <!-- Number of PO msg      -->
+      <td><font color="red">Failed</font></td>         <!-- Unit tests result     -->
+    </tr>
+
+
+  <tr class="regTest2">
+    <td>v0.0.5-209</td>
+    <td>02 jan 2011</td>
+    <td align="right">42&nbsp;910</td>
+    <td align="right">13</td>
+    <td>253&nbsp;<font color="red">fail</font></td >
+    <td>12&nbsp;<font color="green">success</font></td>
+    <td><font color="red">fail</font></td >
+    <td><font color="red">fail</font></td >
+    <td>OK</td>
+    <td><font color="red">No</font>&nbsp;
+      <A NAME="UpNote013" HREF="#Note013">
+      <sup>13</sup></A></td>
+      <td>417</td>
+      <td><font color="red">Failed</font></td>
+    </tr>
+  </table>
 
 
 
@@ -1034,6 +1052,6 @@
      <A HREF="#UpNote014">Up</a><br>
 <hr>
 
-<!-- hhmts start -->Last modified: Sat Jan 22 14:58:35 CET 2011 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat Jan 29 20:35:57 CET 2011 <!-- hhmts end -->
 </body>
 </html>
